# bloomfilter

./: CMakeLists.txt  README.md  main.cpp
include/: helpers.h  simple_bloom_filter.h  string_bloom_filter.h
tests/: simple_bloom_filter_tests.h  string_bloom_filter_tests.h
